# Rethinking_ReLU_Replacement_in_MLP_Classifiers

./: .gitignore  CITATION.cff  LICENSE  NOTICE.md  README.md  environment.yml
FHE_CKKS/: CMakeLists.txt  run_exp_fgvc_all.sh  run_exp_massive_all.sh  run_exp_otto_all.sh
FHE_CKKS/src/: run_he_inference_fgvcaircraft.cpp  run_he_inference_massive.cpp  run_he_inference_otto.cpp
Frozen_backbone/Dinov2/: dinov2_FGVCAircraft_fulltrain_autosave.ipynb  dinov2_FGVCAircraft_smallpool_autosave.ipynb  dinov2_StanfordCars_fulltrain_autosave.ipynb  dinov2_StanfordCars_smallpool_autosave.ipynb  dinov2_Tinyimagenet_fulltrain_autosave.ipynb  dinov2_Tinyimagenet_smallpool_autosave.ipynb  dinov2_cifar100_fulltrain_autosave.ipynb  dinov2_cifar100_smallpool_autosave.ipynb
Frozen_backbone/Qwen3/: Qwen3_banking77_fulltrain_autosave.ipynb  Qwen3_banking77_smallpool_autosave.ipynb  Qwen3_massive_fulltrain_autosave.ipynb  Qwen3_massive_smallpool_autosave.ipynb  Qwen3_sib200_fulltrain_autosave.ipynb  Qwen3_sib200_smallpool_autosave.ipynb
Single_Layer/AG_News(NLP_multi-class)/: AG_News_fulltrain_autosave.ipynb  AG_News_smallpool_autosave.ipynb
Single_Layer/Breast Cancer Wisconsin(binary)/: Breast_Cancer_Wisconsin_fulltrain_autosave.ipynb  Breast_Cancer_Wisconsin_smallpool_autosave.ipynb
Single_Layer/CIFAR-10(CV_multi-class)/: CIFAR10_fulltrain_autosave.ipynb  CIFAR10_smallpool_autosave.ipynb
Single_Layer/CIFAR-100(CV_multi-class)/: CIFAR100_fulltrain_autosave.ipynb  CIFAR100_smallpool_autosave.ipynb
Single_Layer/Diabetes(binary)/: Diabetes_fulltrain_autosave.ipynb  Diabetes_smallpool_autosave.ipynb  plain_experiment_io.py
Single_Layer/results/BWC/: BWC_results.json
(+139 files in other folders)
